--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 asgiref==3.7.2
+Brotli==1.1.0
 certifi==2023.7.22
 charset-normalizer==3.3.0
 defusedxml==0.7.1
@@ -20,5 +21,6 @@ sqlparse==0.4.4
 tablib==3.5.0
 tzdata==2023.3
 urllib3==2.0.6
+whitenoise==6.6.0
 xlrd==2.0.1
 xlwt==1.3.0
